--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- First, create a form tag where our inputs will be nested -->
     <form>
 
-      <!-- Add a label for 'fullname'-->
+      <label for="fullname">Enter Name: </label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
