--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- First, create a form tag where our inputs will be nested -->
     <form>
 
-      <label for="fullname">Enter Name: </label>
-
+      <!-- Add a label for 'fullname'-->
+      <label for="fullname"></label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required>
+
 
       <!-- Add a label for 'email'-->
 
