--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <form>
 
       <!-- Add a label for 'fullname'-->
-      <label for="fullname"></label>
+      <label for="fullname">Enter Name: </label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
 
