--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-
+      <label for="email">Enter Email: </label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
 
