Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
-
+      <label for="message">Enter Message: </label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
 
