Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <textarea id="message" name="message" placeholder="Enter Message"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
+      <checkbox id="checkbox"></checkbox>
 
 
       <!-- Add an input with the type set to 'submit' -->
